--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==14:14:01=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==14:15:37=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2000.75</p>
+                <p id="net-worth">1996.25</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-390.00</p>
+                <p id="unrealized-pl-value">-394.50</p>
             </div>
         </div>
     </header>
@@ -112,11 +112,11 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-
+SellLimit: 5024.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-
+SellLimit: 5024.0
         </div>
         <div class="column">
             <h2 id="column3-title">M2KM24==P/L:-393.0</h2>
