--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==15:40:29=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==15:42:20=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1993.25</p>
+                <p id="net-worth">1986.75</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-397.50</p>
+                <p id="unrealized-pl-value">-404.00</p>
             </div>
         </div>
     </header>
@@ -112,14 +112,14 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-
+SellLimit: 17138.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-400.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-403.5</h2>
 
         </div>
         <div class="column">
