--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==15:42:20=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==15:44:14=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -116,19 +116,19 @@ SellLimit: 17138.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
+SellLimit: 4993.0
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MESM24==P/L:-1.25</h2>
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-403.5</h2>
+            <h2 id="column4-title">M2KM24==P/L:-396.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
+            <h2 id="column5-title">MCLK24</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
