--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==16:47:55=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==16:49:46=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2032.25</p>
+                <p id="net-worth">2031.25</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+182.50</p>
+                <p id="realized-pl-value">+121.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-407.50</p>
+                <p id="unrealized-pl-value">-347.50</p>
             </div>
         </div>
     </header>
@@ -111,7 +111,7 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24==P/L:-62.5</h2>
+            <h2 id="column1-title">MNQM24</h2>
 SellLimit: 4993.0
         </div>
         <div class="column">
@@ -119,7 +119,7 @@ SellLimit: 4993.0
 SellLimit: 4993.0
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-347.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-348.5</h2>
 
         </div>
         <div class="column">
