--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==17:27:06=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==20:45:12=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2034.25</p>
+                <p id="net-worth">2046.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+121.50</p>
+                <p id="realized-pl-value">0.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-344.50</p>
+                <p id="unrealized-pl-value">-322.50</p>
             </div>
         </div>
     </header>
@@ -112,19 +112,19 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-SellLimit: 4993.0
+SellLimit: 17259.25
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-SellLimit: 4993.0
+SellLimit: 5020.25
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-344.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-321.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
-
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
