--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:34:17=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:36:06=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2038.13</p>
+                <p id="net-worth">2042.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">0.00</p>
+                <p id="realized-pl-value">+1.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-331.00</p>
+                <p id="unrealized-pl-value">-328.00</p>
             </div>
         </div>
     </header>
@@ -117,14 +117,13 @@ SellLimit: 5012.0
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 SellLimit: 5012.0
-BuyLimit: 5012.5
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24==P/L:1.25</h2>
-BuyLimit: 5012.5
+            <h2 id="column3-title">MESM24==P/L:-1.25</h2>
+
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-330.5</h2>
+            <h2 id="column4-title">M2KM24==P/L:-328.0</h2>
 
         </div>
         <div class="column">
