--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:39:27=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==21:41:04=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2046.13</p>
+                <p id="net-worth">2050.13</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+8.00</p>
+                <p id="realized-pl-value">+7.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-331.00</p>
+                <p id="unrealized-pl-value">-326.50</p>
             </div>
         </div>
     </header>
@@ -112,19 +112,19 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-SellLimit: 5012.0
+SellLimit: 17222.75
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24</h2>
-SellLimit: 5012.0
+            <h2 id="column2-title">MESM24==P/L:0.0</h2>
+BuyLimit: 5012.0
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24==P/L:-1.25</h2>
+            <h2 id="column3-title">M2KM24==P/L:-326.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-328.5</h2>
-
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
