--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:45:55=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==21:47:35=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2054.88</p>
+                <p id="net-worth">2055.88</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+6.25</p>
+                <p id="realized-pl-value">+5.75</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-320.50</p>
+                <p id="unrealized-pl-value">-319.00</p>
             </div>
         </div>
     </header>
@@ -115,16 +115,16 @@
 SellLimit: 17222.75
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24</h2>
-SellLimit: 5012.0
-        </div>
-        <div class="column">
-            <h2 id="column3-title">MESM24==P/L:-2.5</h2>
+            <h2 id="column2-title">MESM24==P/L:-1.25</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-317.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-315.0</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
