--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==21:50:44=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:52:28=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2056.63</p>
+                <p id="net-worth">2054.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+5.75</p>
+                <p id="realized-pl-value">+6.50</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-318.25</p>
+                <p id="unrealized-pl-value">-321.00</p>
             </div>
         </div>
     </header>
@@ -115,16 +115,17 @@
 SellLimit: 17222.75
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:1.25</h2>
-BuyLimit: 5015.0
+            <h2 id="column2-title">MESM24</h2>
+SellLimit: 5012.0
+BuyLimit: 5013.75
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-319.5</h2>
+            <h2 id="column3-title">MESM24==P/L:1.25</h2>
+BuyLimit: 5013.75
+        </div>
+        <div class="column">
+            <h2 id="column4-title">M2KM24==P/L:-320.5</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
-            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
