--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==23:31:34=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==23:32:55=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2045.88</p>
+                <p id="net-worth">2047.38</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-329.50</p>
+                <p id="unrealized-pl-value">-328.00</p>
             </div>
         </div>
     </header>
@@ -112,10 +112,10 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-
+SellLimit: 17238.75
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-12.5</h2>
+            <h2 id="column2-title">MESM24==P/L:-7.5</h2>
 
         </div>
         <div class="column">
