--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==07:46:26=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==07:50:36=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1981.38</p>
+                <p id="net-worth">1981.63</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-394.00</p>
+                <p id="unrealized-pl-value">-393.75</p>
             </div>
         </div>
     </header>
@@ -112,23 +112,26 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+--LIST OF TRADE(3)--
+--
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MESM24==P/L:-105.0</h2>
+--LIST OF TRADE(3)--
+MNQM24
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MNQM24</h2>
+--LIST OF TRADE(3)--
+--
+        </div>
+        <div class="column">
+            <h2 id="column4-title">MESM24==P/L:-102.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-100.0</h2>
+            <h2 id="column5-title">M2KM24==P/L:-291.5</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-291.0</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
-            <p id="stocks-content-4d">{{stocks-content-4}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
