--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==09:12:06=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==09:13:40=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1980.88</p>
+                <p id="net-worth">1980.38</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-394.50</p>
+                <p id="unrealized-pl-value">-395.00</p>
             </div>
         </div>
     </header>
@@ -112,14 +112,14 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+BuyLimit: 17278.5
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MESM24==P/L:-97.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-93.75</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-300.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-302.5</h2>
 
         </div>
         <div class="column">
