--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==09:31:30=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==09:33:03=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">2010.13</p>
+                <p id="net-worth">1981.13</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-365.25</p>
+                <p id="unrealized-pl-value">-394.25</p>
             </div>
         </div>
     </header>
@@ -112,19 +112,20 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+SellLimit: 17272.75
+BuyLimit: 17285.0
+        </div>
+        <div class="column">
+            <h2 id="column2-title">MNQM24==P/L:7.5</h2>
+BuyLimit: 17285.0
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MESM24==P/L:-65.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:-51.25</h2>
+            <h2 id="column4-title">M2KM24==P/L:-348.5</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-313.0</h2>
-
-        </div>
-        <div class="column">
-            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
-            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
